@@ -15,6 +15,12 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+3/14/12
+    - Fixed a bug in runpf() where it was using the wrong initial
+      voltage magnitude for generator buses marked as PQ buses. Power
+      flow of solved case was not converging in zero iterations as
+      expected.
+
 2/29/12
     - Added a tolerance for detecting violated Q limits in runpf()
       when ENFORCE_Q_LIMS is true. Suggested by Hongxing Ye.
